--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-turborepo",
+  "name": "@mrksbnc/bamboo-monorepo",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -9,12 +9,12 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@cspell/dict-vue": "^3.0.5",
+    "@types/node": "^25.0.2",
+    "cspell": "^9.4.0",
     "prettier": "^3.7.4",
     "turbo": "^2.7.2",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
-  "engines": {
-    "node": ">=18"
-  }
+  "packageManager": "pnpm@10.27.0"
 }
