--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -45,38 +45,19 @@
     "vue": "^3.5.25"
   },
   "devDependencies": {
-    "@cspell/dict-vue": "^3.0.5",
+    "@bamboo/typescript-config": "workspace:*",
     "@prettier/plugin-oxc": "^0.1.3",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.2",
-    "@semantic-release/release-notes-generator": "^14.1.0",
-    "@tsconfig/node22": "^22.0.5",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.2",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/coverage-v8": "4.0.15",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.8.1",
-    "conventional-changelog-conventionalcommits": "^9.1.0",
-    "cspell": "^9.4.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.33.0",
-    "oxlint-tsgolint": "^0.9.1",
-    "postcss-html": "^1.8.0",
     "prettier": "3.7.4",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "sass-embedded": "^1.96.0",
-    "semantic-release": "^25.0.2",
-    "start-server-and-test": "^2.1.3",
-    "stylelint": "^16.26.1",
-    "stylelint-config-standard": "^39.0.1",
-    "stylelint-config-standard-scss": "^16.0.0",
-    "stylelint-config-standard-vue": "^1.0.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-dts": "^4.5.4",
@@ -84,6 +65,5 @@
     "vite-svg-loader": "^5.1.0",
     "vitest": "^4.0.15",
     "vue-tsc": "^3.1.8"
-  },
-  "packageManager": "pnpm@10.27.0"
+  }
 }
