--- a/packages/bamboo-vue/tsconfig.node.json
+++ b/packages/bamboo-vue/tsconfig.node.json
@@ -1,12 +1,9 @@
 {
-	"extends": "@tsconfig/node22/tsconfig.json",
-	"include": ["vite.config.ts", "vitest.config.ts", "playwright.config.ts", "eslint.config.ts"],
-	"compilerOptions": {
-		"noEmit": true,
-		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"types": ["node"]
-	}
+  "extends": "@bamboo/typescript-config/tsconfig.node.json",
+  "include": [
+    "vite.config.ts",
+    "vitest.config.ts",
+    "playwright.config.ts",
+    "eslint.config.ts"
+  ]
 }
