--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "@repo/typescript-config",
-  "version": "0.0.0",
+  "name": "@bamboo/typescript-config",
+  "version": "0.0.1",
   "private": true,
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@tsconfig/node22": "^22.0.5",
+    "@vue/tsconfig": "^0.8.1"
   }
 }
