--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mrksbnc/bamboo",
-  "version": "1.0.4",
+  "name": "@mrksbnc/bamboo-vue",
+  "version": "0.0.1",
   "type": "module",
   "exports": {
     "./components": {
@@ -31,22 +31,17 @@
     "test": "vitest --coverage",
     "type-check": "vue-tsc --noEmit",
     "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-    "lint:spell": "cspell . --cache --config cspell.yaml --verbose",
-    "lint:style": "stylelint \"**/*.{vue,css,scss}\" --fix --config stylelint.config.js",
+    
     "lint": "run-s lint:*",
     "format": "prettier --write .",
     "prepare": "husky",
-    "prepublishOnly": "pnpm build",
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "vue": "^3.5.25"
   },
   "devDependencies": {
     "@bamboo/typescript-config": "workspace:*",
-    "@prettier/plugin-oxc": "^0.1.3",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.2",
     "@vitejs/plugin-vue": "^6.0.3",
@@ -56,8 +51,6 @@
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
     "npm-run-all2": "^8.0.4",
-    "prettier": "3.7.4",
-    "prettier-plugin-organize-imports": "^4.3.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-dts": "^4.5.4",
