feat: svelte init and refactor

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -26,10 +26,9 @@
   },
   "ignorePatterns": [
     "**/dist/",
-    "**/dist-ssr/",
     "**/coverage/",
-    "**/node_modules/",
-    "**/.vitepress/cache/",
-    "**/docs/.vitepress/"
+    "node_modules/",
+    "**/docs/.vitepress/",
+    "**/.vitepress/cache/"
   ]
 }
