--- a/packages/bamboo-docs/tsconfig.json
+++ b/packages/bamboo-docs/tsconfig.json
@@ -1,4 +1,6 @@
 {
   "extends": "@bamboo/typescript-config/tsconfig.app.json",
-  "include": [".vitepress/**/*.ts"]
+  "include": [
+    ".vitepress/**/*.ts"
+  ]
 }
