--- a/packages/bamboo-vue/tsconfig.app.json
+++ b/packages/bamboo-vue/tsconfig.app.json
@@ -1,11 +1,19 @@
 {
-  "extends": "@bamboo/typescript-config/tsconfig.app.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
-  }
+  },
+  "exclude": [
+    "src/**/__tests__/*"
+  ],
+  "extends": "@bamboo/typescript-config/tsconfig.app.json",
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue"
+  ]
 }
