--- a/packages/typescript-config/tsconfig.app.json
+++ b/packages/typescript-config/tsconfig.app.json
@@ -1,9 +1,12 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "lib": ["dom", "esnext"]
-  }
+    "lib": [
+      "dom",
+      "esnext"
+    ]
+  },
+  "extends": "@vue/tsconfig/tsconfig.dom.json"
 }
