--- a/packages/typescript-config/tsconfig.node.json
+++ b/packages/typescript-config/tsconfig.node.json
@@ -1,10 +1,12 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "types": ["node"]
-  }
+    "types": [
+      "node"
+    ]
+  },
+  "extends": "@tsconfig/node22/tsconfig.json"
 }
