--- a/packages/typescript-config/tsconfig.vitest.json
+++ b/packages/typescript-config/tsconfig.vitest.json
@@ -1,11 +1,14 @@
 {
-  "extends": "./tsconfig.app.json",
-  "exclude": [],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
     "module": "esnext",
     "moduleResolution": "bundler",
     "lib": [],
-    "types": ["node", "jsdom"]
-  }
+    "types": [
+      "node",
+      "jsdom"
+    ]
+  },
+  "exclude": [],
+  "extends": "./tsconfig.app.json"
 }
