--- a/packages/bamboo-docs/tsconfig.json
+++ b/packages/bamboo-docs/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "extends": "@bamboo/typescript-config/tsconfig.app.json",
-  "include": [
-    ".vitepress/**/*.ts"
-  ]
+	"extends": "@bamboo/tsconfig/tsconfig.app.json",
+	"include": [".vitepress/**/*.ts"]
 }
