--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -13,6 +13,6 @@ plugins:
   - prettier-plugin-svelte
 
 overrides:
-  - files: "*.svelte"
+  - files: '*.svelte'
     options:
       parser: svelte
