--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "@mrksbnc/bamboo-monorepo",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "check-types": "turbo run check-types",
-    "dev": "turbo run dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint"
-  },
-  "devDependencies": {
-    "@cspell/dict-vue": "^3.0.5",
-    "@prettier/plugin-oxc": "^0.1.3",
-    "@types/node": "^25.0.2",
-    "cspell": "^9.4.0",
-    "prettier": "^3.7.4",
-    "prettier-plugin-organize-imports": "^4.3.0",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.7.2",
-    "turbo": "^2.7.2",
-    "typescript": "5.9.2"
-  },
-  "packageManager": "pnpm@10.27.0"
+	"name": "@mrksbnc/bamboo",
+	"private": true,
+	"scripts": {
+		"build": "turbo run build",
+		"check-types": "turbo run check-types",
+		"dev": "turbo run dev",
+		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
+		"lint": "turbo run lint"
+	},
+	"devDependencies": {
+		"@cspell/dict-vue": "^3.0.5",
+		"@prettier/plugin-oxc": "^0.1.3",
+		"@tailwindcss/vite": "^4.1.17",
+		"@types/node": "^25.0.2",
+		"cspell": "^9.4.0",
+		"prettier": "^3.7.4",
+		"prettier-plugin-organize-imports": "^4.3.0",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"tailwindcss": "^4.1.17",
+		"turbo": "^2.7.2",
+		"typescript": "5.9.2"
+	},
+	"packageManager": "pnpm@10.27.0"
 }
