--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -1,63 +1,62 @@
 {
-  "name": "@mrksbnc/bamboo-vue",
-  "version": "0.0.1",
-  "sideEffects": [
-    "**/*.css"
-  ],
-  "type": "module",
-  "exports": {
-    "./components": {
-      "types": "./dist/components/index.d.ts",
-      "require": "./dist/components.cjs",
-      "import": "./dist/components.js"
-    },
-    "./core": {
-      "types": "./dist/core/index.d.ts",
-      "require": "./dist/core.cjs",
-      "import": "./dist/core.js"
-    },
-    "./lib.css": {
-      "import": "./dist/lib.css",
-      "require": "./dist/lib.css"
-    }
-  },
-  "files": [
-    "dist",
-    "!dist/**/*.test.*",
-    "!dist/**/*.spec.*",
-    "README.md",
-    "LICENSE"
-  ],
-  "scripts": {
-    "build": "vite build --mode production",
-    "test": "vitest --coverage",
-    "type-check": "vue-tsc --noEmit",
-    "lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-    "lint": "run-s lint:*",
-    "format": "prettier --write .",
-    "prepare": "husky",
-    "prepublishOnly": "pnpm build"
-  },
-  "dependencies": {
-    "vue": "^3.5.25"
-  },
-  "devDependencies": {
-    "@bamboo/typescript-config": "workspace:*",
-    "@types/jsdom": "^27.0.0",
-    "@types/node": "^25.0.2",
-    "@vitejs/plugin-vue": "^6.0.3",
-    "@vitest/coverage-v8": "4.0.15",
-    "@vue/test-utils": "^2.4.6",
-    "husky": "^9.1.7",
-    "jiti": "^2.6.1",
-    "jsdom": "^27.3.0",
-    "npm-run-all2": "^8.0.4",
-    "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@latest",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-vue-devtools": "^8.0.5",
-    "vite-svg-loader": "^5.1.0",
-    "vitest": "^4.0.15",
-    "vue-tsc": "^3.1.8"
-  }
+	"name": "@mrksbnc/bamboo-vue",
+	"version": "0.0.1",
+	"sideEffects": [
+		"**/*.css"
+	],
+	"type": "module",
+	"exports": {
+		"./components": {
+			"types": "./dist/components/index.d.ts",
+			"require": "./dist/components.cjs",
+			"import": "./dist/components.js"
+		},
+		"./core": {
+			"types": "./dist/core/index.d.ts",
+			"require": "./dist/core.cjs",
+			"import": "./dist/core.js"
+		},
+		"./lib.css": {
+			"import": "./dist/lib.css",
+			"require": "./dist/lib.css"
+		}
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*",
+		"README.md",
+		"LICENSE"
+	],
+	"scripts": {
+		"build": "vite build --mode production",
+		"test": "vitest --coverage",
+		"type-check": "vue-tsc --noEmit",
+		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
+		"lint": "run-s lint:*",
+		"format": "prettier --write .",
+		"prepare": "husky",
+		"prepublishOnly": "pnpm build"
+	},
+	"dependencies": {
+		"vue": "^3.5.25"
+	},
+	"devDependencies": {
+		"@bamboo/tsconfig": "workspace:*",
+		"@types/jsdom": "^27.0.0",
+		"@types/node": "^25.0.2",
+		"@vitejs/plugin-vue": "^6.0.3",
+		"@vitest/coverage-v8": "4.0.15",
+		"@vue/test-utils": "^2.4.6",
+		"husky": "^9.1.7",
+		"jiti": "^2.6.1",
+		"jsdom": "^27.3.0",
+		"npm-run-all2": "^8.0.4",
+		"vite": "npm:rolldown-vite@latest",
+		"vite-plugin-dts": "^4.5.4",
+		"vite-plugin-vue-devtools": "^8.0.5",
+		"vite-svg-loader": "^5.1.0",
+		"vitest": "^4.0.15",
+		"vue-tsc": "^3.1.8"
+	}
 }
