--- a/packages/bamboo-vue/tsconfig.node.json
+++ b/packages/bamboo-vue/tsconfig.node.json
@@ -1,9 +1,4 @@
 {
-  "extends": "@bamboo/typescript-config/tsconfig.node.json",
-  "include": [
-    "vite.config.ts",
-    "vitest.config.ts",
-    "playwright.config.ts",
-    "eslint.config.ts"
-  ]
+	"extends": "@bamboo/tsconfig/tsconfig.node.json",
+	"include": ["vite.config.ts", "vitest.config.ts", "playwright.config.ts", "eslint.config.ts"]
 }
