--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
-		"check-types": "turbo run check-types",
+		"check-types": "turbo run type-check",
 		"dev": "turbo run dev",
 		"format": "prettier --write \"**/*.{ts,tsx,md,json,html,css,scss,yml,yaml,js,jsx,cjs,mjs,cjs,svelte,vue,html}\"",
 		"lint": "turbo run lint"
@@ -12,15 +12,27 @@
 		"@cspell/dict-vue": "^3.0.5",
 		"@prettier/plugin-oxc": "^0.1.3",
 		"@tailwindcss/vite": "^4.1.17",
-		"@types/node": "^25.0.2",
+		"@tsconfig/node22": "^22.0.5",
+		"@types/jsdom": "^27.0.0",
+		"@types/node": "^25.0.3",
+		"@vitest/browser-playwright": "^4.0.15",
+		"@vitest/coverage-v8": "4.0.16",
 		"cspell": "^9.4.0",
+		"globals": "^17.0.0",
+		"jsdom": "^27.3.0",
+		"oxlint": "~1.36.0",
+		"oxlint-tsgolint": "^0.10.1",
+		"playwright": "^1.57.0",
 		"prettier": "^3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"tailwindcss": "^4.1.17",
 		"turbo": "^2.7.2",
-		"typescript": "5.9.2"
+		"typescript": "5.9.2",
+		"vite": "npm:rolldown-vite@latest",
+		"vite-plugin-dts": "^4.5.4",
+		"vitest": "^4.0.16"
 	},
 	"packageManager": "pnpm@10.27.0"
 }
