--- a/packages/bamboo-core/tsconfig.json
+++ b/packages/bamboo-core/tsconfig.json
@@ -1,4 +1,11 @@
 {
-	"extends": "@bamboo/tsconfig/tsconfig.node.json",
-	"include": ["src/**/*.ts", "src/**/*.d.ts"]
+	"extends": "@tsconfig/node22/tsconfig.json",
+	"compilerOptions": {
+		"noEmit": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+		"module": "esnext",
+		"moduleResolution": "bundler",
+		"types": ["node"]
+	},
+	"include": ["./src/**/*.ts", "**/*.d.ts"]
 }
