--- a/packages/bamboo-vue/.oxlintrc.json
+++ b/packages/bamboo-vue/.oxlintrc.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "../../node_modules/oxlint/configuration_schema.json",
+	"$schema": "./node_modules/oxlint/configuration_schema.json",
 	"plugins": ["eslint", "jsdoc", "jsx-a11y", "oxc", "typescript", "unicorn", "vitest", "vue"],
 	"categories": {
 		"correctness": "error",
