--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -50,6 +50,8 @@
 		"jiti": "^2.6.1",
 		"npm-run-all2": "^8.0.4",
 		"vite-plugin-vue-devtools": "^8.0.5",
+		"oxlint": "~1.36.0",
+		"oxlint-tsgolint": "^0.10.1",
 		"vue-tsc": "^3.1.8"
 	}
 }
