--- a/packages/bamboo-core/tsconfig.json
+++ b/packages/bamboo-core/tsconfig.json
@@ -1,11 +1,15 @@
 {
 	"extends": "@tsconfig/node22/tsconfig.json",
 	"compilerOptions": {
-		"noEmit": true,
+		"declaration": true,
+		"declarationMap": true,
+		"outDir": "./dist",
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": ["node"]
+		"types": ["node"],
+		"lib": ["DOM", "DOM.Iterable", "ESNext"]
 	},
-	"include": ["./src/**/*.ts", "**/*.d.ts"]
+	"include": ["./src/**/*.ts", "**/*.d.ts"],
+	"exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts", "./dist"]
 }
