--- a/packages/bamboo-core/package.json
+++ b/packages/bamboo-core/package.json
@@ -19,10 +19,12 @@
 	],
 	"scripts": {
 		"build": "vite build",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
+		"lint:spell": "cspell --config ../../cspell.yaml \"**/*.{md,mdx}\"",
+		"lint": "run-s lint:*"
 	},
 	"devDependencies": {
-		"vitest": "^4.0.15",
 		"vue": "^3.5.25"
 	},
 	"peerDependencies": {
