--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@mrksbnc/bamboo",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
@@ -15,16 +16,17 @@
 		"@tsconfig/node22": "^22.0.5",
 		"@types/jsdom": "^27.0.0",
 		"@types/node": "^25.0.3",
-		"@vitest/browser-playwright": "^4.0.15",
 		"@vitest/coverage-v8": "4.0.16",
 		"cspell": "^9.4.0",
 		"globals": "^17.0.0",
 		"husky": "^9.1.7",
+		"jiti": "^2.6.1",
 		"jsdom": "^27.3.0",
-		"playwright": "^1.57.0",
+		"npm-run-all2": "^8.0.4",
+		"oxlint": "~1.36.0",
+		"oxlint-tsgolint": "^0.10.1",
 		"prettier": "^3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
-		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"tailwindcss": "^4.1.17",
 		"turbo": "^2.7.2",
