--- a/packages/bamboo-core/tsconfig.json
+++ b/packages/bamboo-core/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@tsconfig/node22/tsconfig.json",
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"declaration": true,
 		"declarationMap": true,
@@ -7,9 +7,22 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": ["node"],
-		"lib": ["DOM", "DOM.Iterable", "ESNext"]
+		"types": [
+			"node"
+		],
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ESNext"
+		]
 	},
-	"include": ["./src/**/*.ts", "**/*.d.ts"],
-	"exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts", "./dist"]
+	"include": [
+		"./src/**/*.ts",
+		"**/*.d.ts"
+	],
+	"exclude": [
+		"./src/**/*.test.ts",
+		"./src/**/*.spec.ts",
+		"./dist"
+	]
 }
