--- a/packages/bamboo-docs/package.json
+++ b/packages/bamboo-docs/package.json
@@ -5,12 +5,12 @@
 	"scripts": {
 		"docs:build": "vitepress build",
 		"docs:dev": "vitepress dev",
-		"docs:preview": "vitepress preview"
+		"docs:preview": "vitepress preview",
+		"lint:spell": "cspell --config ../../cspell.yaml \"**/*.{md,mdx}\"",
+		"lint": "run-s lint:*"
 	},
 	"devDependencies": {
 		"@mrksbnc/bamboo-vue": "workspace:*",
-		"@types/node": "^25.0.2",
-		"typescript": "~5.9.3",
 		"vitepress": "2.0.0-alpha.15"
 	}
 }
