--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -30,26 +30,21 @@
 	],
 	"scripts": {
 		"build": "vite build --mode production",
-		"test": "vitest --coverage",
-		"type-check": "vue-tsc --noEmit",
-		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-		"lint": "run-s lint:*",
 		"format": "prettier --write .",
-		"prepublishOnly": "pnpm build"
+		"lint": "run-s lint:*",
+		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
+		"prepublishOnly": "pnpm build",
+		"test": "vitest --coverage",
+		"type-check": "vue-tsc --noEmit"
 	},
 	"dependencies": {
 		"vue": "^3.5.25"
 	},
 	"devDependencies": {
 		"@bamboo/core": "workspace:*",
-		"@types/node": "^25.0.2",
 		"@vitejs/plugin-vue": "^6.0.3",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.8.1",
-		"jiti": "^2.6.1",
-		"npm-run-all2": "^8.0.4",
-		"oxlint": "~1.36.0",
-		"oxlint-tsgolint": "^0.10.1",
 		"vite-plugin-vue-devtools": "^8.0.5",
 		"vue-tsc": "^3.1.8"
 	}
