--- a/packages/bamboo-vue/tsconfig.node.json
+++ b/packages/bamboo-vue/tsconfig.node.json
@@ -1,11 +1,16 @@
 {
-	"extends": "@tsconfig/node22/tsconfig.json",
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"noEmit": true,
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": ["node"]
+		"types": [
+			"node"
+		]
 	},
-	"include": ["vite.config.ts", "vitest.config.ts"]
+	"include": [
+		"vite.config.ts",
+		"vitest.config.ts"
+	]
 }
