--- a/packages/bamboo-core/tsconfig.json
+++ b/packages/bamboo-core/tsconfig.json
@@ -7,22 +7,9 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": [
-			"node"
-		],
-		"lib": [
-			"DOM",
-			"DOM.Iterable",
-			"ESNext"
-		]
+		"types": ["node"],
+		"lib": ["DOM", "DOM.Iterable", "ESNext"]
 	},
-	"include": [
-		"./src/**/*.ts",
-		"**/*.d.ts"
-	],
-	"exclude": [
-		"./src/**/*.test.ts",
-		"./src/**/*.spec.ts",
-		"./dist"
-	]
+	"include": ["./src/**/*.ts", "**/*.d.ts"],
+	"exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts", "./dist"]
 }
