--- a/packages/bamboo-vue/tsconfig.node.json
+++ b/packages/bamboo-vue/tsconfig.node.json
@@ -5,12 +5,7 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": [
-			"node"
-		]
+		"types": ["node"]
 	},
-	"include": [
-		"vite.config.ts",
-		"vitest.config.ts"
-	]
+	"include": ["vite.config.ts", "vitest.config.ts"]
 }
