--- a/packages/bamboo-docs/tsconfig.json
+++ b/packages/bamboo-docs/tsconfig.json
@@ -5,11 +5,12 @@
 		"target": "esnext",
 		"module": "esnext",
 		"moduleResolution": "bundler",
+		"lib": ["DOM"],
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": [".vitepress/**/*.ts", "src/**/*.ts", "**/*.d.ts"],
+	"include": [".vitepress/**/*.ts", "src/**/*.ts", "env.d.ts"],
 	"exclude": ["node_modules", "dist"]
 }
