--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tsconfig/node22": "^22.0.5",
 		"@types/jsdom": "^27.0.0",
 		"@types/node": "^25.0.3",
+		"@vitest/browser-playwright": "^4.0.15",
 		"@vitest/coverage-v8": "4.0.16",
 		"cspell": "^9.4.0",
 		"globals": "^17.0.0",
@@ -26,17 +27,16 @@
 		"npm-run-all2": "^8.0.4",
 		"oxlint": "~1.38.0",
 		"oxlint-tsgolint": "^0.10.1",
+		"playwright": "^1.57.0",
 		"prettier": "^3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"tailwindcss": "^4.1.17",
-		"turbo": "^2.7.2",
+		"turbo": "^2.7.3",
 		"typescript": "^5.9.3",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-dts": "^4.5.4",
-		"vitest": "^4.0.16",
-		"@vitest/browser-playwright": "^4.0.15",
-		"playwright": "^1.57.0"
+		"vitest": "^4.0.16"
 	},
 	"packageManager": "pnpm@10.27.0"
 }
