reafactor: component and tailwindcss plugin detection updates

--- a/packages/bamboo-core/package.json
+++ b/packages/bamboo-core/package.json
@@ -14,8 +14,8 @@
 	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
+		"LICENSE",
+		"!dist/**/*.test.*"
 	],
 	"scripts": {
 		"build": "vite build",
