--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,12 @@
 	"explorer.fileNesting.enabled": true,
 	"typescript.experimental.useTsgo": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"tailwindCSS.classAttributes": ["class", "className", "tw"],
-	"tailwindCSS.experimental.classRegex": ["/\\*tw\\*/\\s*['\"`]([^'\"`]*)['\"`]"],
+	"tailwindCSS.classAttributes": ["tw"],
+	"tailwindCSS.experimental.classRegex": [
+		["/\\*\\s*tw\\s*\\*/\\s*`([^`]*)`", "([^`]*)"],
+		["/\\*\\s*tw\\s*\\*/\\s*'([^']*)'", "([^']*)"],
+		["/\\*\\s*tw\\s*\\*/\\s*\"([^\"]*)\"", "([^\"]*)"]
+	],
 	"editor.quickSuggestions": {
 		"other": "on",
 		"strings": "on",
