--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "turbo run build",
 		"dev": "turbo run dev",
 		"format": "prettier --write \"**/*.{ts,tsx,md,json,html,css,scss,yml,yaml,js,jsx,cjs,mjs,cjs,svelte,vue,html}\"",
-		"lint": "turbo run lint",
+		"lint": "turbo run lint --parallel && pnpm oxlint . --fix",
 		"prepare": "husky",
 		"ib": "pnpm install && pnpm build"
 	},
