--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -25,9 +25,8 @@
 	"scripts": {
 		"build": "vite build --mode production",
 		"format": "prettier --write .",
-		"lint": "run-s lint:*",
-		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
 		"prepublishOnly": "pnpm build",
+		"lint:spell": "cspell --config ../../cspell.yaml \"**/*.{ts,vue,md}\"",
 		"test": "vitest --coverage",
 		"type-check": "vue-tsc --noEmit"
 	},
