--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
-		"format": "prettier --write \"**/*.{ts,tsx,md,json,html,css,scss,yml,yaml,js,jsx,cjs,mjs,cjs,svelte,vue,html}\"",
-		"lint": "turbo run lint --parallel && pnpm oxlint . --fix",
+		"format": "prettier --write \"**/*.{ts,md,json,html,css,scss,yml,yaml,js,cjs,mjs,vue}\"",
+		"lint": "run-p lint:*",
+		"lint:spell": "cspell --config ./cspell.yaml \"**/*.{ts,md,json,html,css,scss,yml,yaml,js,cjs,mjs,vue}\" --verbose --show-perf-summary",
+		"lint:oxlint": "pnpm oxlint . --fix",
 		"prepare": "husky",
 		"ib": "pnpm install && pnpm build"
 	},
