--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"jiti": "^2.6.1",
 		"jsdom": "^27.3.0",
 		"npm-run-all2": "^8.0.4",
+		"oxlint": "~1.38.0",
+		"oxlint-tsgolint": "^0.11.0",
 		"playwright": "^1.57.0",
 		"prettier": "^3.7.4",
 		"prettier-plugin-organize-imports": "^4.3.0",
