--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -99,7 +99,7 @@ jobs:
         run: |
           pnpm lint:oxlint
 
-  cspell:
+  spell-checker:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
