--- a/packages/bamboo-docs/package.json
+++ b/packages/bamboo-docs/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@bamboo/docs",
+	"name": "@mrksbnc/bamboo-docs",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"docs:build": "vitepress build",
+		"build:docs": "vitepress build",
 		"docs:dev": "vitepress dev",
 		"docs:preview": "vitepress preview",
 		"lint": "run-s lint:*",
