--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -7,9 +7,9 @@
 	"type": "module",
 	"exports": {
 		".": {
-			"types": "./dist/components/index.d.ts",
-			"require": "./dist/components.cjs",
-			"import": "./dist/components.js"
+			"types": "./dist/index.d.ts",
+			"require": "./dist/index.umd.cjs",
+			"import": "./dist/index.es.js"
 		},
 		"./lib.css": {
 			"import": "./dist/lib.css",
@@ -33,7 +33,7 @@
 		"vue": "^3.5.25"
 	},
 	"devDependencies": {
-		"@bamboo/core": "workspace:*",
+		"@mrksbnc/bamboo-core": "workspace:*",
 		"@vitejs/plugin-vue": "^6.0.3",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.8.1",
