--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
 		},
 		"type-check": {
 			"dependsOn": ["^type-check"]
+		},
+		"docs:dev": {
+			"dependsOn": ["^docs:dev"]
 		}
 	},
 	"ui": "tui"
