--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
 		"@tsconfig/node22": "^22.0.5",
 		"@types/jsdom": "^27.0.0",
 		"@types/node": "^25.0.3",
+		"@vitejs/plugin-vue": "^6.0.3",
 		"@vitest/browser-playwright": "^4.0.15",
 		"@vitest/coverage-v8": "4.0.16",
+		"@vue/test-utils": "^2.4.6",
+		"@vue/tsconfig": "^0.8.1",
+		"@vueuse/core": "^14.1.0",
 		"cspell": "^9.4.0",
 		"globals": "^17.0.0",
 		"husky": "^9.1.7",
@@ -40,7 +44,9 @@
 		"typescript": "^5.9.3",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-dts": "^4.5.4",
-		"vitest": "^4.0.16"
+		"vitest": "^4.0.16",
+		"vue": "^3.5.25",
+		"vue-tsc": "^3.1.8"
 	},
 	"packageManager": "pnpm@10.28.0",
 	"dependencies": {
