--- a/packages/bamboo-core/package.json
+++ b/packages/bamboo-core/package.json
@@ -8,9 +8,11 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"import": "./dist/index.es.js"
-		}
+		},
+		"./package.json": "./package.json"
 	},
-	"main": "./dist/index.js",
+	"main": "./dist/index.es.js",
+	"module": "./dist/index.es.js",
 	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
@@ -20,9 +22,6 @@
 	"scripts": {
 		"build": "pnpm type-check && vite build --mode production",
 		"type-check": "tsc --noEmit"
-	},
-	"devDependencies": {
-		"vue": "^3.5.25"
 	},
 	"peerDependencies": {
 		"vue": "^3.5.25"
