--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -14,8 +14,12 @@
 		"./lib.css": {
 			"import": "./dist/lib.css",
 			"require": "./dist/lib.css"
-		}
+		},
+		"./package.json": "./package.json"
 	},
+	"main": "./dist/index.umd.cjs",
+	"module": "./dist/index.es.js",
+	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
 		"LICENSE",
@@ -30,13 +34,10 @@
 		"type-check": "vue-tsc --noEmit"
 	},
 	"dependencies": {
-		"vue": "^3.5.25"
+		"@mrksbnc/bamboo-core": "workspace:*"
 	},
-	"devDependencies": {
-		"@mrksbnc/bamboo-core": "workspace:*",
-		"@vitejs/plugin-vue": "^6.0.3",
-		"@vue/test-utils": "^2.4.6",
-		"@vue/tsconfig": "^0.8.1",
-		"vue-tsc": "^3.1.8"
+	"peerDependencies": {
+		"vue": "^3.5.25",
+		"@vueuse/core": "^12.0.0"
 	}
 }
