--- a/turbo.json
+++ b/turbo.json
@@ -2,27 +2,15 @@
 	"$schema": "https://turborepo.com/schema.json",
 	"tasks": {
 		"build": {
-			"dependsOn": [
-				"^build"
-			],
-			"inputs": [
-				"$TURBO_DEFAULT$",
-				".env*"
-			],
-			"outputs": [
-				"dist/**",
-				"!.turbo/**"
-			]
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*"],
+			"outputs": ["dist/**", "!.turbo/**"]
 		},
 		"lint": {
-			"dependsOn": [
-				"^lint"
-			]
+			"dependsOn": ["^lint"]
 		},
 		"type-check": {
-			"dependsOn": [
-				"^type-check"
-			]
+			"dependsOn": ["^type-check"]
 		},
 		"docs:dev": {
 			"cache": false,
