--- a/package.json
+++ b/package.json
@@ -17,40 +17,32 @@
 	"devDependencies": {
 		"@cspell/dict-vue": "^3.0.5",
 		"@prettier/plugin-oxc": "^0.1.3",
-		"@tailwindcss/vite": "^4.1.17",
+		"@tailwindcss/vite": "^4.1.18",
 		"@tsconfig/node22": "^22.0.5",
 		"@types/jsdom": "^27.0.0",
-		"@types/node": "^25.0.3",
-		"@vitejs/plugin-vue": "^6.0.3",
-		"@vitest/browser-playwright": "^4.0.15",
-		"@vitest/coverage-v8": "4.0.16",
+		"@types/node": "^25.0.9",
+		"@vitest/coverage-v8": "4.0.17",
 		"@vue/test-utils": "^2.4.6",
-		"@vue/tsconfig": "^0.8.1",
 		"@vueuse/core": "^14.1.0",
-		"cspell": "^9.4.0",
+		"cspell": "^9.6.0",
 		"globals": "^17.0.0",
 		"husky": "^9.1.7",
 		"jiti": "^2.6.1",
-		"jsdom": "^27.3.0",
+		"jsdom": "^27.4.0",
 		"npm-run-all2": "^8.0.4",
 		"oxlint": "~1.39.0",
-		"oxlint-tsgolint": "^0.11.0",
-		"playwright": "^1.57.0",
-		"prettier": "^3.7.4",
+		"oxlint-tsgolint": "^0.11.1",
+		"prettier": "^3.8.0",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"tailwindcss": "^4.1.17",
-		"turbo": "^2.7.3",
+		"tailwindcss": "^4.1.18",
+		"turbo": "^2.7.4",
 		"typescript": "^5.9.3",
-		"vite": "npm:rolldown-vite@latest",
+		"vite": "^7.3.1",
 		"vite-plugin-dts": "^4.5.4",
-		"vitest": "^4.0.16",
-		"vue": "^3.5.25",
-		"vue-tsc": "^3.1.8"
+		"vitest": "^4.0.17",
+		"vue": "^3.5.26",
+		"vue-tsc": "^3.2.2"
 	},
-	"packageManager": "pnpm@10.28.0",
-	"dependencies": {
-		"@tailwindcss/postcss": "^4.1.18",
-		"postcss": "^8.5.6"
-	}
+	"packageManager": "pnpm@10.28.0"
 }
