--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -36,6 +36,10 @@
 	"dependencies": {
 		"@mrksbnc/bamboo-core": "workspace:*"
 	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^6.0.3",
+		"@vue/tsconfig": "^0.8.1"
+	},
 	"peerDependencies": {
 		"vue": "^3.5.25",
 		"@vueuse/core": "^12.0.0"
