--- a/packages/bamboo-docs/package.json
+++ b/packages/bamboo-docs/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@mrksbnc/bamboo-core": "workspace:*",
 		"@mrksbnc/bamboo-vue": "workspace:*",
+		"@vueuse/core": "^14.1.0",
 		"vitepress": "2.0.0-alpha.15",
 		"vue": "^3.5.26"
 	}
