--- a/packages/bamboo-vue/package.json
+++ b/packages/bamboo-vue/package.json
@@ -11,6 +11,10 @@
 			"require": "./dist/index.umd.cjs",
 			"import": "./dist/index.es.js"
 		},
+		"./components/*": {
+			"types": "./dist/components/*/index.d.ts",
+			"import": "./dist/components/*/index.js"
+		},
 		"./lib.css": {
 			"import": "./dist/lib.css",
 			"require": "./dist/lib.css"
@@ -34,14 +38,14 @@
 		"type-check": "vue-tsc --noEmit"
 	},
 	"dependencies": {
-		"@mrksbnc/bamboo-core": "workspace:*"
+		"@mrksbnc/bamboo-core": "workspace:*",
+		"@vueuse/core": "^14.1.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^6.0.3",
 		"@vue/tsconfig": "^0.8.1"
 	},
 	"peerDependencies": {
-		"vue": "^3.5.25",
-		"@vueuse/core": "^12.0.0"
+		"vue": "^3.5.25"
 	}
 }
