--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,22 @@
 	"explorer.fileNesting.enabled": true,
 	"typescript.experimental.useTsgo": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"tailwindCSS.classAttributes": ["tw"],
+	"tailwindCSS.classAttributes": [
+		"tw"
+	],
 	"tailwindCSS.experimental.classRegex": [
-		["/\\*\\s*tw\\s*\\*/\\s*`([^`]*)`", "([^`]*)"],
-		["/\\*\\s*tw\\s*\\*/\\s*'([^']*)'", "([^']*)"],
-		["/\\*\\s*tw\\s*\\*/\\s*\"([^\"]*)\"", "([^\"]*)"]
+		[
+			"/\\*\\s*tw\\s*\\*/\\s*`([^`]*)`",
+			"([^`]*)"
+		],
+		[
+			"/\\*\\s*tw\\s*\\*/\\s*'([^']*)'",
+			"([^']*)"
+		],
+		[
+			"/\\*\\s*tw\\s*\\*/\\s*\"([^\"]*)\"",
+			"([^\"]*)"
+		]
 	],
 	"editor.quickSuggestions": {
 		"other": "on",
