refactor: vite 8 beta and clean install

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"jiti": "^2.6.1",
 		"jsdom": "^27.4.0",
 		"npm-run-all2": "^8.0.4",
-		"oxlint": "~1.40.0",
+		"oxlint": "~1.41.0",
 		"oxlint-tsgolint": "^0.11.1",
 		"prettier": "^3.8.0",
 		"prettier-plugin-organize-imports": "^4.3.0",
@@ -38,7 +38,7 @@
 		"tailwindcss": "^4.1.18",
 		"turbo": "^2.7.5",
 		"typescript": "^5.9.3",
-		"vite": "npm:rolldown-vite@latest",
+		"vite": "8.0.0-beta.8",
 		"vite-plugin-dts": "^4.5.4",
 		"vitest": "^4.0.17",
 		"vue": "^3.5.26",
