--- a/packages/bamboo-docs/tsconfig.json
+++ b/packages/bamboo-docs/tsconfig.json
@@ -1,16 +1,28 @@
 {
-	"extends": "@tsconfig/node22/tsconfig.json",
 	"compilerOptions": {
-		"types": ["node"],
+		"types": [
+			"node"
+		],
 		"target": "esnext",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"lib": ["DOM"],
+		"lib": [
+			"DOM"
+		],
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": [
+				"./src/*"
+			]
 		}
 	},
-	"include": [".vitepress/**/*.ts", "src/**/*.ts"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": [
+		"node_modules",
+		"dist"
+	],
+	"extends": "@tsconfig/node22/tsconfig.json",
+	"include": [
+		".vitepress/**/*.ts",
+		"src/**/*.ts"
+	]
 }
