--- a/packages/bamboo-core/tsconfig.json
+++ b/packages/bamboo-core/tsconfig.json
@@ -5,24 +5,11 @@
 		"outDir": "./dist",
 		"module": "esnext",
 		"moduleResolution": "bundler",
-		"types": [
-			"node"
-		],
+		"types": ["node"],
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-		"lib": [
-			"DOM",
-			"DOM.Iterable",
-			"ESNext"
-		]
+		"lib": ["DOM", "DOM.Iterable", "ESNext"]
 	},
-	"exclude": [
-		"./src/**/*.test.ts",
-		"./src/**/*.spec.ts",
-		"./dist"
-	],
+	"exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts", "./dist"],
 	"extends": "../../tsconfig.json",
-	"include": [
-		"./src/**/*.ts",
-		"**/*.d.ts"
-	]
+	"include": ["./src/**/*.ts", "**/*.d.ts"]
 }
